# Colocviu

./: .gitignore  CMakeLists.txt  README.md
data/: Logs.txt  Tests.csv
data/employees/: Bucuresti.csv  Iasi.csv
data/events/: Bucuresti.csv  Iasi.csv
data/orders/Bucuresti/: Order1.csv  Order10.csv  Order11.csv  Order2.csv  Order3.csv  Order4.csv  Order5.csv  Order6.csv  Order7.csv  Order8.csv  Order9.csv
data/products/: Brasov.csv  Bucuresti.csv  Cluj-Napoca.csv  Iasi.csv  Timisoara.csv
data/reports/: Bucuresti.csv  Cluj-Napoca.csv
src/: main.cpp
src/employee/: Barista.cpp  Barista.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Waiter.cpp  Waiter.h
src/event/: CoffeeTasting.cpp  CoffeeTasting.h  Event.cpp  Event.h  MovieNight.cpp  MovieNight.h  Workshop.cpp  Workshop.h
src/inventory/: Product.cpp  Product.h
src/menu/: employeeChoices.cpp  employeeChoices.h  eventChoices.cpp  eventChoices.h  eventOrganizer.cpp  eventOrganizer.h  eventOrganizerChoices.cpp  eventOrganizerChoices.h  menu.cpp  menu.h  orderSimulation.cpp  orderSimulation.h  productChoices.cpp  productChoices.h  reportGenerator.cpp  reportGenerator.h
src/order/: Order.cpp  Order.h
src/report/: Report.cpp  Report.h
src/util/: CSVParser.cpp  CSVParser.h  Logger.cpp  Logger.h  selectCity.cpp  selectCity.h  storeEmployees.cpp  storeEmployees.h  storeEvents.cpp  storeEvents.h  storeProducts.cpp  storeProducts.h
src/utils/: CSVParser.cpp
